feat: add tags to organize endpoints
