# swagger_output.json
@@ -7,12 +7,21 @@
   },
   "host": "localhost:3000",
   "basePath": "/",
+  "tags": [
+    {
+      "name": "Person",
+      "description": "Endpoints"
+    }
+  ],
   "schemes": [
     "http"
   ],
   "paths": {
     "/person/": {
       "get": {
+        "tags": [
+          "Person"
+        ],
         "description": "retorna todos os usuários.",
         "parameters": [],
         "responses": {
@@ -25,6 +34,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Person"
+        ],
         "description": "modifica informação de uma pessoa específica",
         "parameters": [
           {
@@ -49,6 +61,9 @@
     },
     "/person/{personId}": {
       "get": {
+        "tags": [
+          "Person"
+        ],
         "description": "pega informação de uma pessoa específica",
         "parameters": [
           {
@@ -68,6 +83,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Person"
+        ],
         "description": "remove uma pessoa pelo ID do Mongo",
         "parameters": [
           {
@@ -87,6 +105,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Person"
+        ],
         "description": "substitui as informações da pessoa com ID informado pelos dados do corpo",
         "parameters": [
           {
@@ -134,7 +155,7 @@
         },
         "dateOfBirth": {
           "type": "number",
-          "example": 1682988181375
+          "example": 1682988434859
         }
       }
     }
